# BossMind-Hollow-Knight

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml  requirements.txt
configs/: game_info.yaml  game_version.yaml
scripts/: probe_attach.py  probe_hp.py
src/bossmind/: paths.py
src/bossmind/env_tools/: input.py  memory.py
