[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bossmind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymem>=1.13,<2",
    "PyYAML>=6.0.1,<7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP015", "I001"]  # UP015: 允许 open(..., "r"); I001: 不强制 import 排序

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
